@@ -1,7 +1,7 @@
 Package: polyCub
 Title: Cubature over Polygonal Domains
-Version: 0.2-0
-Date: 2013-05-09
+Version: 0.2-1
+Date: 2013-06-12
 Authors@R: c(person("Sebastian", "Meyer",
                     email = "Sebastian.Meyer@ifspm.uzh.ch",
                     role = c("aut","cre","trl")),
@@ -10,10 +10,11 @@ Authors@R: c(person("Sebastian", "Meyer",
                     role = c("ths")))
 Description: A package providing methods for cubature (numerical integration)
              over polygonal domains.
-             Currently, three (non-adaptive) cubature methods are implemented:
+             Currently, four (non-adaptive) cubature methods are implemented:
              the two-dimensional midpoint rule (a simple wrapper around
-             spatstat::as.im.function), the product Gauss cubature proposed by
-             Sommariva and Vianello (2007), and a quasi-exact method specific
+             spatstat::as.im.function), the product Gauss cubature proposed
+             by Sommariva and Vianello (2007), an efficient cubature rule for
+             isotropic functions, and a quasi-exact method specific
              to the integration of the bivariate Gaussian density over
              polygonal domains.
              For cubature over simple hypercubes, the
@@ -21,6 +22,6 @@ Description: A package providing methods for cubature (numerical integration)
 License: GPL-2
 URL: https://github.com/WastlM/polyCub
 BugReports: https://github.com/WastlM/polyCub/issues
-Depends: R (>= 2.14.0), methods, sp
+Depends: R (>= 2.15.0), methods, sp
 Imports: rgeos, spatstat, statmod
 Suggests: testthat, mvtnorm, gpclib
